--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <div class="container">
         <i class="fas fa-arrow-left"></i>
         <div id="slider-box">
-            <h1 id="titolo" class="mg cl "></h1>
+            <h1 id="titolo" class="mg cl"></h1>
             <div class="line mg" ></div>
             <div id="testo" class="mg cl"></div>
         </div>
         <i class="fas fa-arrow-right"></i>
+    </div>
+    <div class="pulsanti">
+        <div class="pulsante"></div>
+        <div class="pulsante"></div>
+        <div class="pulsante"></div>
+        <div class="pulsante"></div>
     </div>
     <script src="js/script.js"></script>
 </body>
